log/build_2023-10-04_15-51-15/autonomous_exploration/stderr.log
/usr/lib/python3/dist-packages/setuptools/command/install.py:34: SetuptoolsDeprecationWarning: setup.py install is deprecated. Use build and pip and other standards-based tools.
  warnings.warn(
  File "/home/Isaac/ros2_ws/install/autonomous_exploration/lib/python3.10/site-packages/autonomous_exploration/control.py", line 2
    mport sys
          ^^^
SyntaxError: invalid syntax

